<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="#C91169ED"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/back_button_description"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_ticket"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/all_tickets_category"
        android:layout_width="101dp"
        android:layout_height="55dp"
        android:layout_marginStart="2dp"
        android:background="@drawable/squadbutton"
        android:backgroundTintMode="add"
        android:text="@string/all_tickets"
        android:textColor="#8b008b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002"
        tools:visibility="visible" />

    <Button
        android:id="@+id/full_category"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/squadbutton"
        android:text="@string/full"
        android:textColor="#8b008b"
        app:layout_constraintBottom_toBottomOf="@+id/all_tickets_category"
        app:layout_constraintStart_toEndOf="@+id/all_tickets_category"
        app:layout_constraintTop_toTopOf="@+id/all_tickets_category"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/student_category"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/squadbutton"
        android:text="@string/student"
        android:textColor="#8b008b"
        app:layout_constraintBottom_toBottomOf="@+id/full_category"
        app:layout_constraintStart_toEndOf="@+id/full_category"
        app:layout_constraintTop_toTopOf="@+id/full_category"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/under_1_year_category"
        android:layout_width="105dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/squadbutton"
        android:text="@string/under1"
        android:textColor="#8b008b"
        app:layout_constraintBottom_toBottomOf="@+id/student_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/student_category"
        app:layout_constraintTop_toTopOf="@+id/student_category"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="#C91169ED"
        android:text="@string/search_ticket"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/departure"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/departureAirports"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.9" />


    <Spinner
        android:id="@+id/departureAirports"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:entries="@array/departureAirports"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/arrival"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departureAirports" />

    <Spinner
        android:id="@+id/arrivalAirports"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/date"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrivalAirports" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:autofillHints="date"
        android:hint="@string/date_format"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintVertical_bias="0.050000012" />

</androidx.constraintlayout.widget.ConstraintLayout>